WEB: Fix overflow under the tentacle

--- a/css/layout.css
+++ b/css/layout.css
@@ -118,6 +118,7 @@ footer a:hover {
 
 .col-1-5 {
 	width: 20%;
+	position: relative;
 }
 
 .col-1-3 {
